--- a/hungo-vite/package.json
+++ b/hungo-vite/package.json
@@ -27,6 +27,7 @@
     "postcss": "8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
+    "react-input-mask": "^2.0.4",
     "tailwindcss": "3.3.4",
     "vite": "^4.5.5"
   }
