--- a/hungo-spring/src/main/resources/application.properties
+++ b/hungo-spring/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+# spring Security
+logging.level.org.springframework.security=DEBUG
