--- a/hungo-spring/src/main/resources/application.properties
+++ b/hungo-spring/src/main/resources/application.properties
@@ -1,27 +1,27 @@
 spring.application.name=hungo
 
-# usuário e senha de conexão com o banco de dados
+# usuário e senha de conexao com o banco de dados
 spring.datasource.username=root
 spring.datasource.password=root
 
-# url de conexão do banco de dados
+# url de conexao do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/hungo
 
 # Dialeto do banco de dados
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# criando tabelas automático
+# criando tabelas automatico
 spring.jpa.hibernate.ddl-auto=update
 
-# configuração do Hibernate para reconhecer o nome de tabelas em caixa alta
+# configuracao do Hibernate para reconhecer o nome de tabelas em caixa alta
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# configurações de log
+# configuracoes de log
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 # spring Security
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
