--- a/hungo-vite/package.json
+++ b/hungo-vite/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "3.44.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
